- LSlang : Correction du z-index de l'object LSlang_select

--- a/trunk/css/default/LSdefault.css
+++ b/trunk/css/default/LSdefault.css
@@ -48,6 +48,7 @@ div.LSerror {
   position:                 absolute;
   max-width:                200px;
   padding:                  5px;
+  z-index:                  100;
 }
 
 #LSlang_select img {
